--- a/src/components/Input/styles.css
+++ b/src/components/Input/styles.css
@@ -4,6 +4,7 @@
     color: white;
     text-shadow: 0px 0px 10px #E55A45;
     font-weight: bold;
+    margin-top: 20px;
 }
 
 .input-input {
@@ -15,6 +16,7 @@
     color: white;
     font-size: 18px;
     padding: 10px 20px;
+    margin-top: 5px;
 }
 
 .input.error {
