--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -2,9 +2,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 6% auto 0px auto;
+    margin: 0px auto 0px auto;
     width: 1100px;
-    padding: 0px;
+    padding-top: 6%;
 }
 
 .login-cadastro {
