--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,11 +1,50 @@
-header#main-Header{
+.HeaderItems{
     width: 100%;
-    height: 80px;
-    background-image: linear-gradient(135deg, #9833ff 0%, #5500cc 75%);
-    font-size: 18px;
+    height: 98px;
+    background: linear-gradient(135deg, #9833ff 0%, #5500cc 75%);
+    font-size: 24px;
     font-weight: bold;
     color: #FFF;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.header-logo{
+    color: #FFF;
+    justify-self: start;
+    margin-left: 20px;
+    cursor: pointer;
+}
+
+.fa-react{
+    margin-left: 0.5rem;
+    font-size: 1.6rem;
+}
+
+.nav-menu{
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+    grid-gap: 10px;
+    list-style: none;
+    text-align: center;
+    width: 70vw;
+    justify-content: end;
+    margin-right: 2rem;
+}
+
+.nav-links{
+    color: white;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+}
+
+.nav-links:hover{
+    background-color: #6d76f7;
+    border-radius: 4px;
+    transition: all 0.2s ease-out;
+}
+
+.menu-icon{
+    display: none;
 }
