--- a/src/pages/MinhaConta/styles.css
+++ b/src/pages/MinhaConta/styles.css
@@ -1,4 +1,37 @@
-body {
-    background: #FBF7FF;
-    background-image: none;
+.img-label{
+    height: 477px;
+    width: 477px;
+    background: linear-gradient(135deg, #9833ff 0%, #5500cc 75%);
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 166px;
+    margin-left: 266px;
 }
+.fundo{
+    height: 100vh;
+    background: #fff;
+}
+
+/* label {
+    cursor: pointer;
+    display: block;
+    font-size: 14px;
+    color: white;
+    font-weight: bold;
+    background-color: #FF5040;
+    display: inline-block;
+    padding: 2px 30px;
+    border-radius: 10px;
+    transition: background .2s;
+}
+
+label:hover {
+    background-color: #E53D2E;
+}
+
+input tipo file do label {
+    display: none;
+} */
