--- a/src/pages/Cadastro/styles.css
+++ b/src/pages/Cadastro/styles.css
@@ -23,13 +23,17 @@
 
 .dados-cadastro a {
     display: block;
-    width: 160px;
+    width: 180px;
     font-size: 18px;
     text-decoration: none;
     color: white;
     text-shadow: 0px 0px 10px #E55A45;
     margin: 20px auto 0px auto;
     text-align: center;
+}
+
+.dados-cadastro a svg {
+    margin-right: 8px;
 }
 
 .logo-ilustracao {
