integração com a api de usuários

--- a/src/pages/Cadastro/styles.css
+++ b/src/pages/Cadastro/styles.css
@@ -7,21 +7,21 @@
     padding-top: 6%;
 }
 
-.dados-cadastro {
+.cadastro-dado {
     width: 25rem;
     margin: 0px 0px 0px 60px;
 }
 
-.dados-cadastro img {
+.cadastro-dado img {
     display: block;
     margin: 0 auto;
 }
 
-.dados-cadastro button {
+.cadastro-dado button {
     margin: 20px auto 0px auto;
 }
 
-.dados-cadastro a {
+.cadastro-dado a {
     display: block;
     width: 160px;
     font-size: 18px;
@@ -32,12 +32,12 @@
     text-align: center;
 }
 
-.logo-ilustracao {
+.cadastro-ilustracao {
     padding: 0px;
     max-width: 700px;
 }
 
-.logo-ilustracao img {
+.cadastro-ilustracao img {
     display: block;
     width: 100%;
 }
@@ -47,10 +47,10 @@
         width: 350px;
         flex-direction: column;
     }
-    .logo-ilustracao img {
+    .cadastro-ilustracao img {
         display: none;
     }
-    .dados-cadastro {
+    .cadastro-dado {
         width: 100%;
         margin: 0px;
     }
