--- a/src/App.css
+++ b/src/App.css
@@ -157,7 +157,11 @@ table {
     animation-name: waitState;
     animation-duration: 1s;
     animation-iteration-count: infinite;
+    width: 100px;
 }
+
+
+/* ERREI AQUI ÓP SEU BURTRÃO */
 
 html {
     height: 100%;
